# html2pdf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build_script  build_script.sh  learncpp.template  linux_libharu_setup.sh
Auxiliaries/: get-pdf.js  get-pdf.md  url2html.sh  url2pdf.sh
Docs/: algorithm  motivation  mvp  ulinks
Doxy/: Doxyfile
Prototyping/: get-pdf-stealth-after.js  get-pdf-stealth-before.js  get-pdf.js  get-pdf.md  url2pdf.sh
src/: main.cpp
src/headers/: builder.hpp  converter.hpp  get_html.hpp  pdf_helper.hpp  pdf_link_obj.hpp  pdf_obj.hpp  pdf_text_obj.hpp  process.hpp  tree_link_node.hpp  tree_text_node.hpp  writer.hpp
src/html/headers/: get_html.hpp  html_parser.hpp
src/html/sources/: get_html.cpp  html_parser.cpp
src/pdf/headers/: converter.hpp  writer.hpp
src/pdf/sources/: converter.cpp
src/pdf/tree_builder/headers/: tree_builder.hpp  tree_node.hpp
src/pdf/tree_builder/sources/: tree_link_node.cc
src/sources/: converter.cpp  get_html.cpp  main.cpp  pdf_helper.cc  process.cpp
src/sources/builder/: builder.cc  pdf_link_obj.cc  pdf_text_obj.cc
src/sources/tree_builder/: tree_builder.cc  tree_text_node.cc
vitalii.kaplenko/: README.md
